feat: use app dependencies

--- a/package.json
+++ b/package.json
@@ -4,9 +4,5 @@
   "description": "Create a Knowledge Base for your Avatar",
   "main": "index.js",
   "author": "charles.lobo@gmail.com",
-  "license": "MIT",
-  "dependencies": {
-    "cote": "^0.19.1",
-    "elife-utils": "everlifeai/elife-utils"
-  }
+  "license": "MIT"
 }
